--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,33 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
-  margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  color: #4a4a4a;
+  text-align: center;
+}
+
+:focus {
+  outline: 0;
+}
+
+input {
+  border: 0;
   padding: 0;
-  font-family: sans-serif;
+}
+
+p {
+  margin: 0;
+}
+
+button {
+  cursor: pointer;
 }
